Bom paow baskod

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
 <!-- Denna fil skall alltid heta index.html och är den första filen på en hemsida -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>hem</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <div id="wrapperhem">
+        <nav>
+             Sortiment
+             <a href="abonneracafeet.html">Abonnera Caféet</a>
+             <a href="provningar.html">Provningar</a>         
+        </nav>
+        <section id="section1"> Café och butik </section>
+        <section id="section2"> 
+            <article>bild grejs</article> 
+        </section>
+        <section id="section3"> Domori </section>
+        <section id="section4"> Om Berzelii choklad </section>
+        <footer>footer</footer>
+    </div>
+</body>
+</html>
