--- a/index.html
+++ b/index.html
@@ -11,15 +11,30 @@
 <body>
     <div id="wrapperhem">
         <nav>
-             Sortiment
-             <a href="abonneracafeet.html">Abonnera Caféet</a>
-             <a href="provningar.html">Provningar</a>         
+            <ul> 
+                <li><a href="praliner.html"></a>SORTIMENT</li>
+                <li><a href="abonneracafeet.html">ABONNERA CAFÉET</a></li>
+                <li><a href="provningar.html">PROVNINGAR</a></li>
+            </ul>        
         </nav>
         <section id="section1"> Café och butik </section>
         <section id="section2"> 
-            <article>bild grejs</article> 
+            <article>
+                <img src="img/berzeliimjölk.png" alt="claes häller mjölk">
+                Choklad och vinprovning
+            </article> 
+            <article>
+                <img src="img/berzeliimacka.png" alt="lyxig räkmacka med ett glas öl">
+                Öppen chokladprovning
+            </article> 
+            <article>
+                <img src="img/berzeliicafe.png" alt="cafét ur fokus">
+                Sopplunch
+            </article>
         </section>
-        <section id="section3"> Domori </section>
+        <section id="section3"> 
+            <h2>DOMORI</h2> 
+        </section>
         <section id="section4"> Om Berzelii choklad </section>
         <footer>footer</footer>
     </div>
