--- a/index.html
+++ b/index.html
@@ -21,21 +21,36 @@
         <section id="section2"> 
             <article>
                 <img src="img/berzeliimjölk.png" alt="claes häller mjölk">
-                Choklad och vinprovning
+                <p>Choklad och vinprovning</p>
             </article> 
             <article>
                 <img src="img/berzeliimacka.png" alt="lyxig räkmacka med ett glas öl">
-                Öppen chokladprovning
+                <p>Öppen chokladprovning</p>
             </article> 
             <article>
                 <img src="img/berzeliicafe.png" alt="cafét ur fokus">
-                Sopplunch
+                <p>Sopplunch</p>
             </article>
         </section>
         <section id="section3"> 
-            <h2>DOMORI</h2> 
+            <h2>DOMORI</h2>
+            <p>
+                Domori grundades av Gianluca Franzonis kreativa sinne och passion för natur, gastronomi och kakao. 
+                1993, efter att ha avslutat sina studier i företagsekonomi och ekonomi, anlände Gianluca till Venezuela. 
+                Där han blev förälskad i kakaons magi och bestämde sig för att utveckla en affärsmodell för att omplacera fin kakao på marknaden.
+                I tre år levde han på fältet och experimenterade med olika sorter och bearbetning efter skörd för att bevara den biologiska mångfalden och förhindra utrotningen av extrafin CRIOLLO-kakao.
+                Namnet DOMORI är en hyllning till 1600-talets Venedig, en symbol för handel, resor och äventyr.
+            </p> 
+            <p>
+                På Berzelii Choklad har vi nu all grossistverksamhet för Domoris fantastiska choklad i Sverige. 
+                Här kan du köpa chokladkakor till din butik eller restaurang, couvertyr till ditt konditori, storkök eller glasstillverkning. 
+                Allt av absolut yppersta kvalitet.
+            </p>
         </section>
-        <section id="section4"> Om Berzelii choklad </section>
+        <section id="section4"> 
+            <h2>Om Berzelii choklad </h2>
+            <img src="img/Berzeliibakelse.png" alt="chokladdessert">
+        </section>
         <footer>footer</footer>
     </div>
 </body>
