--- a/index.html
+++ b/index.html
@@ -5,31 +5,67 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hem</title>
+    <title>Hem</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="wrapperhem">
+    <div id="wrapperhem">   
         <nav>
             <ul> 
-                <li><a href="praliner.html"></a>SORTIMENT</li>
+                <li><a href="praliner.html">SORTIMENT</a></li>
                 <li><a href="abonneracafeet.html">ABONNERA CAFÉET</a></li>
                 <li><a href="provningar.html">PROVNINGAR</a></li>
             </ul>        
         </nav>
-        <section id="section1"> Café och butik </section>
+        <section id="section1"> 
+            <h1>Café och butik</h1>
+                <img src="img/348s.jpg" alt="butiken">
+                <p>
+                    Vi har ett stort utbud av varma choklader och vad passar väl bättre under en kall vinterdag på stan?
+                    Här serverar vi också goda soppluncher alla vardagar i veckan. Eller kika in på en god kaffe med pralin därtill.
+                    Om du vill ha det lite festligare, då kanske vi får locka med ett glas bubblor till någon av våra chokladbakelser.
+                </p>
+                <p>
+                    Du hittar oss på Magasinsgatan i Göteborg.
+                    Hjärtligt välkommen!
+                </p>
+        </section>
         <section id="section2"> 
             <article>
                 <img src="img/berzeliimjölk.png" alt="claes häller mjölk">
-                <p>Choklad och vinprovning</p>
+                <h3>Choklad och vinprovning</h3>
+                <p>
+                    Monica Lääs Henke och Claes Engberg guidar er genom många goda smakkombinationer. 
+                    Vi provar fyra högklassiga viner med 6 rena bean to bar-choklader samt sex praliner från vår egen tillverkning.
+                </p>
+                <p><strong>Pris 539 kr</strong></p>
             </article> 
             <article>
                 <img src="img/berzeliimacka.png" alt="lyxig räkmacka med ett glas öl">
-                <p>Öppen chokladprovning</p>
+                <h3>Öppen chokladprovning</h3>
+                <p>
+                    En härlig provning med fokus på kvalitetschoklad. 
+                    Vi berättar om odling av kakao, historia och hur tillverkning går till. 
+                    Vi provar 12 rena choklader samt 5 praliner från vår egen tillverkning. 
+                    Ge bort ett presentkort och passa på att gå med själv. 
+                    Den som får presentkortet kan sedan själv anmäla sig till ett passande datum. 
+                </p>
+                <p><strong>Pris 395 kr</strong></p>
+                <p>
+                    <strong>2023</strong>
+                    Torsdag 16 februari
+                    Torsdag 23 mars FULLBOKAD
+                    Torsdag 12 oktober
+                </p>
             </article> 
             <article>
                 <img src="img/berzeliicafe.png" alt="cafét ur fokus">
-                <p>Sopplunch</p>
+                <h3>Sopplunch</h3>
+                <p>
+                    Alla vardagar mellan 11:30 till 15:30 serverar vi en rykande varm och välsmakande Dagens Soppa som dagens lunch. 
+                    Vi har även Veckans Veganska Soppa. Till soppan ingår även en god sandwich och sallad.
+                </p>
+                <p><strong>Pris 95 kr</strong></p>
             </article>
         </section>
         <section id="section3"> 
@@ -47,11 +83,34 @@
                 Allt av absolut yppersta kvalitet.
             </p>
         </section>
-        <section id="section4"> 
+        <section id="section4"> <img src="img/Berzeliibakelse.png" alt="chokladdessert">
             <h2>Om Berzelii choklad </h2>
-            <img src="img/Berzeliibakelse.png" alt="chokladdessert">
+            <p>
+                Berzelii Choklad drivs av Claes Engberg som sköter kontakt och försäljning till restauranger och butiker, Monica Lääs som ansvarar för vår butik. 
+                Tillsammans med Jimmy Wollberg och våra duktiga konditorer skapar vi en kreativ miljö med högt kvalitetstänkande i alla led.
+            </p>
+            <p>
+                Vi har tillverkat praliner sedan 2002, och vi förvaltar en stolt hantverkstradition med förnyelse som en viktig ledstjärna. 
+                Alla sinnen måste vara vässade, även om vi vilar på en stabil grund av kunskap, precision och känsla. 
+                Det handlar om ett kreativt och äkta hantverk som vi är stolta över. 
+            </p>
+            <p>
+                Vi använder bara de bästa råvarorna. Inga aromer eller essenser. 
+                Vi plockar upp de smaker vi tycker om, och experimenterar och resonerar oss fram för att finna den bästa chokladen till respektive smak. 
+                Passar smaken bäst med Arriba, Sambiranochoklad eller kanske Carenero? 
+                Olika sorters choklad används till olika praliner, beroende på vad som passar till respektive smaksättning och utförande.  
+            </p>
+            <p>    
+                Till sist handlar det om att ge våra chokladälskande kunder den höga kvalitet de förväntar sig och samtidigt bjuda på en och annan överraskning i smak och utseende.
+            </p>
+            
         </section>
-        <footer>footer</footer>
+        <footer>
+            <p>Berzelii Choklad | Magasinsgatan 12, Göteborg</p>
+            <a href="https://www.facebook.com/berzelii">
+                <img src="img/Screenshot 2023-03-07 at 09.24.26.png" alt="facebook ikon">
+            </a>
+        </footer>
     </div>
 </body>
 </html>
