--- a/abonneracafeet.html
+++ b/abonneracafeet.html
@@ -11,7 +11,12 @@
     <div id="wrapperabonnera">
         <nav>samma nav</nav>
         <header>abonnera caféet</header>
-        <footer>samma footer</footer>
+        <footer>
+            <p>Berzelii Choklad | Magasinsgatan 12, Göteborg</p>
+            <a href="https://www.facebook.com/berzelii">
+                <img src="img/Facebook ikon.png" alt="facebook ikon">
+            </a>
+        </footer>
     </div>
 </body>
 </html>
