--- a/desserter.html
+++ b/desserter.html
@@ -10,9 +10,24 @@
 <body>
     <div id="wrapperdesserter">
         <nav>samma nav här oxå</nav>
-        <section id="section7">produktinfo?</section>
+        <header><h1>TÅRTOR OCH DESSERTER</h1></header>
+        <section id="section7">
+            <p>
+                På Berzelii Choklad är vi stolta över våra desserter. 
+                Vi har stor produktionskapacitet och kan leverera stora kvantiteter om så behövs – men vi tummar aldrig på kvaliteten. 
+                Alla våra desserter produceras med samma fina råvaror och naturliga ingredienser. 
+                Lämpligt som efterrätt till fest, middag eller catering. 
+                För större beställningar kan vi även göra dessertlängder och bakelser efter kundens egna önskemål. 
+                Alla våra desserter görs helt utan artificiella aromer, konsistensgivare eller konserveringsmedel.
+            </p>
+        </section>
         <section id="section8">tårtor och desserter, kopiera allt eftersom</section>
-        <footer>samma footer</footer>
+        <footer>
+            <p>Berzelii Choklad | Magasinsgatan 12, Göteborg</p>
+            <a href="https://www.facebook.com/berzelii">
+                <img src="img/Facebook ikon.png" alt="facebook ikon">
+            </a>
+        </footer>
     </div>
 </body>
 </html>
