--- a/praliner.html
+++ b/praliner.html
@@ -13,7 +13,12 @@
         <header>bild här</header>
         <section id="section5">Produktinfo?</section>
         <section id="section6">Vi lägger in en fet section här och löser det sen</section>
-        <footer>footer</footer>
+        <footer>
+            <p>Berzelii Choklad | Magasinsgatan 12, Göteborg</p>
+            <a href="https://www.facebook.com/berzelii">
+                <img src="img/Facebook ikon.png" alt="facebook ikon">
+            </a>
+        </footer>
     </div>
 </body>
 </html>
