--- a/presentaskar.html
+++ b/presentaskar.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,66 @@
     <title>Presentaskar</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div id="wrapperpresentaskar">
         <nav>samma nav</nav>
-        <header>Presentaskar</header>
-        <section id="section9">bror jag vet inte vad som pågår</section>
-        <footer>samma footer</footer>
+        <header>
+            <h1>PRESENTASKAR</h1>
+        </header>
+        <section id="section9">
+            <img src="img/Presentaskar.png" alt="Chokladask">
+            <div>
+                <h2>Våra Presentaskar</h2>
+                <p>
+                    En ask med utsökta handgjorda praliner är en present som passar de flesta tillfällen.
+                    En julklapp till anställda eller kunder, en födelsedagspresent eller som gå-bort-present istället
+                    för vinflaska - en ask praliner gör alla glada.
+                    Du kan också använda pralinaskar i ditt företags marknadsföring.
+                    Vi har även möjlighet att ta fram specialaskar med tryck till ert företag.
+                    Kontakta oss för förslag och offert.
+                </p>
+                <h3>Prislista</h3>
+                <p><i>(alla priser är inklusive moms)</i></p>
+                <ul>
+                    <li>5 praliner 99 kr</li>
+                    <li>10 praliner 195 kr</li>
+                    <li>15 praliner 259 kr</li>
+                    <li>25 praliner 369 kr</li>
+                    <li>50 praliner 699 kr</li>
+                </ul>
+                <p>Handlar du över 10 000 kr lämnas 8% rabatt. Över 5000 kr 5 % rabatt.</p>
+            </div>
+        </section>
+        <section id="section10">
+            <article>
+                <img src="img/Presentask 5.png" alt="Presentask 5st">
+                <p>Ask med 5 praliner 99 kr</p>
+            </article>
+            <article>
+                <img src="img/Presentask 10.png" alt="Presentask 10st">
+                <p>10 praliner 195 kr</p>
+            </article>
+            <article>
+                <img src="img/Presentask 15.png" alt="Presentask 15st">
+                <p>15 praliner 259 kr</p>
+            </article>
+            <article>
+                <img src="img/Presentask 25.png" alt="Presentask 25st">
+                <p>25 praliner 369 kr</p>
+            </article>
+            <article>
+                <img src="img/Presentask 50.png" alt="Presentask 50st">
+                <p>50 praliner 699 kr</p>
+            </article>
+        </section>
+        <footer>
+            <p>Berzelii Choklad | Magasinsgatan 12, Göteborg</p>
+            <a href="https://www.facebook.com/berzelii">
+                <img src="img/Facebook ikon.png" alt="facebook ikon">
+            </a>
+        </footer>
     </div>
 </body>
+
 </html>
