--- a/provningar.html
+++ b/provningar.html
@@ -12,7 +12,12 @@
         <nav>samma nav</nav>
         <header>bild</header>
         <aside>en aside?</aside>
-        <footer>samma footer</footer>
+        <footer>
+            <p>Berzelii Choklad | Magasinsgatan 12, Göteborg</p>
+            <a href="https://www.facebook.com/berzelii">
+                <img src="img/Facebook ikon.png" alt="facebook ikon">
+            </a>
+        </footer>
     </div>
 </body>
 </html>
