mellan lektioner fuckeries??

--- a/desserter.html
+++ b/desserter.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,21 +8,66 @@
     <title>Desserter</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div id="wrapperdesserter">
         <nav>samma nav här oxå</nav>
-        <header><h1>TÅRTOR OCH DESSERTER</h1></header>
+        <header>
+            <h1>TÅRTOR OCH DESSERTER</h1>
+        </header>
         <section id="section7">
             <p>
-                På Berzelii Choklad är vi stolta över våra desserter. 
-                Vi har stor produktionskapacitet och kan leverera stora kvantiteter om så behövs – men vi tummar aldrig på kvaliteten. 
-                Alla våra desserter produceras med samma fina råvaror och naturliga ingredienser. 
-                Lämpligt som efterrätt till fest, middag eller catering. 
-                För större beställningar kan vi även göra dessertlängder och bakelser efter kundens egna önskemål. 
+                På Berzelii Choklad är vi stolta över våra desserter.
+                Vi har stor produktionskapacitet och kan leverera stora kvantiteter om så behövs – men vi tummar aldrig
+                på kvaliteten.
+                Alla våra desserter produceras med samma fina råvaror och naturliga ingredienser.
+                Lämpligt som efterrätt till fest, middag eller catering.
+                För större beställningar kan vi även göra dessertlängder och bakelser efter kundens egna önskemål.
                 Alla våra desserter görs helt utan artificiella aromer, konsistensgivare eller konserveringsmedel.
             </p>
+            <p>
+                Beställ våra goda tårtor före kl. 12.00 dagen innan avhämtning.
+                Tårta/bakelser som skall hämtas lör, sön eller måndag måste beställas senast kl 12 på fredagen.
+                Beställningen finns att hämta i vår butik på Magasinsgatan 12 efter 10.30.
+                Vid större beställningar kan leveranstid vara längre.
+                Maila din beställning på info@berzelii.com eller ring oss på 031-778 16 60.
+            </p>
         </section>
-        <section id="section8">tårtor och desserter, kopiera allt eftersom</section>
+        <section id="section8">
+            <img src="img/chokladtarta.jpeg" alt="chokladtårta">
+            <article>
+                <p><strong>CHOKLAD CHOKLAD CHOKLAD TÅRTA</strong></p>
+                <p> Chokladkaka, mörk chokladmousse, mjölkchokladmousse med lime, karamell och pumpafröcroustillant.</p>
+                <ul>
+                    <i>
+                        <li>6-8-bitars tårta 325 kr</li>
+                        <li>14-16-bitars tårta 525 kr</li>
+                    </i>
+                </ul>
+            </article>
+            <img src="img/chokladbakelse.jpeg" alt="chokladbakelse">
+            <article>
+                <p><strong>CHOKLAD CHOKLAD CHOKLAD BAKELSE</strong></p>
+                <p> Chokladkaka, mörk chokladmousse, mjölkchokladmousse med lime, karamell och pumpafröcroustillant.</p>
+                <p><i>Bakelse 68 kr</i></p>
+            </article>
+            <img src="img/hallonvaniljtarta.jpeg" alt="hallon- och vaniljtårta">
+            <article>
+                <p><strong>HALLON HALLON VANILJ TÅRTA</strong></p>
+                <p>Vaniljkaka, hallonkompott, hallongelé,vaniljmousse, rostad vitchoklad och solroscroustillant.</p>
+                <ul> <i>
+                        <li>6 bitars tårta 275 kr</li>
+                        <li>12 bitars tårta 495 kr</li>
+                    </i>
+                </ul>
+            </article>
+            <img src="img/hallonvaniljbakelse.jpeg" alt="hallon- och vaniljbakelse">
+            <article>
+                <p><strong>HALLON HALLON VANILJ BAKELSE</strong></p>
+                <p>Vaniljkaka, hallonkompott, hallongelé,vaniljmousse, rostad vitchoklad och solroscroustillant</p>
+                <p><i>Bakelse 68 kr</i></p>
+            </article>
+        </section>
         <footer>
             <p>Berzelii Choklad | Magasinsgatan 12, Göteborg</p>
             <a href="https://www.facebook.com/berzelii">
@@ -30,4 +76,5 @@
         </footer>
     </div>
 </body>
+
 </html>
