--- a/praliner.html
+++ b/praliner.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,78 @@
     <title>Praliner</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div id="wrapperpraliner">
         <nav>kopiera in nav:en bara</nav>
-        <header>bild här</header>
-        <section id="section5">Produktinfo?</section>
-        <section id="section6">Vi lägger in en fet section här och löser det sen</section>
+        <header>
+            <h1>PRALINER</h1>
+        </header>
+        <section id="section5">
+            <article>
+                <p>
+                    På Berzelii Choklad gör vi trettio olika sorters delikata praliner, och du kan välja att köpa dem i
+                    en vacker ask eller i lösvikt.
+                    Pralinerna tillverkas enligt våra egna recept, och görs på den bästa tänkbara chokladen.
+                    I vår chokladfabrik gör vi alla led i produktionen: Vi smälter, kokar, mixar, tempererar och doppar.
+                    Vi förädlar och smaksätter chokladen, skapar fyllningar och garneringar och presenterar pralinerna
+                    på ett vackert och smakfullt sätt.
+                    I butiken säljer vi även utvalda kakor av förnämlig kvalitet samt mörk choklad av absolut bästa
+                    sort.
+                </p>
+                <p><strong>ALLERGIINFO</strong></p>
+                <p>
+                    Praliner med mandel och nötter är markerade med *. Praliner med gluten markeras med **.
+                    Samtliga praliner kan innehålla spår av mandel, nötter och gluten. Alla praliner innehåller laktos.
+                </p>
+            </article>
+        </section>
+        <section id="section6">
+            <article>
+                <h3>MÖRKA PRALINER</h3>
+            </article>
+            <article>
+                <img src="img/svartcitron.png" alt="svart citron pralin">
+                <p><strong>SVART CITRON</strong></p>
+                <p>Mörk ganache med citron och lakrits.</p>
+            </article>
+            <article>
+                <img src="img/arribaequador.png" alt="arriba equador pralin">
+            </article>
+            <article>
+                <img src="img/solros.jpeg" alt="solros pralin">
+            </article>
+            <article>
+                <img src="img/glogg.png" alt="glögg pralin">
+            </article>
+            <article>
+                <img src="img/hallonhjärta.jpeg" alt="hallon hjärta pralin">
+            </article>
+            <article>
+                <img src="img/salt_karamell.jpeg" alt="salt karamell pralin">
+            </article>
+            <article>
+                <img src="img/kaffevanilj.png" alt="kaffe och vanilj pralin">
+            </article>
+            <article>
+                <img src="img/saopalme.png" alt="sao palme pralin">
+            </article>
+            <article>
+                <img src="img/franskkola.png" alt="fransk kola pralin">
+            </article>
+            <article>
+                <img src="img/sesamyuzu.jpeg" alt="sesam yuzo pralin">
+            </article>
+            <article>
+                <img src="img/veganpassion.jpeg" alt="veganpassion pralin">
+            </article>
+            <article>
+                <img src="img/smogenwhiskey.jpeg" alt="smögen whiskey pralin">
+            </article>
+            <article>
+                <img src="img/bjornbar.png" alt="björnbärs pralin">
+            </article>
+        </section>
         <footer>
             <p>Berzelii Choklad | Magasinsgatan 12, Göteborg</p>
             <a href="https://www.facebook.com/berzelii">
@@ -21,4 +88,5 @@
         </footer>
     </div>
 </body>
+
 </html>
