--- a/presentaskar.html
+++ b/presentaskar.html
@@ -42,7 +42,7 @@
         <section id="section10">
             <article>
                 <img src="img/Presentask 5.png" alt="Presentask 5st">
-                <p>Ask med 5 praliner 99 kr</p>
+                <p>5 praliner 99 kr</p>
             </article>
             <article>
                 <img src="img/Presentask 10.png" alt="Presentask 10st">
