--- a/presentaskar.html
+++ b/presentaskar.html
@@ -12,12 +12,18 @@
 <body>
     <div id="wrapperpresentaskar">
         <header id="headerhem">
+            <div id="hamburgermeny" onclick="toggleMenu()">
+                <div id="line1"></div>
+                <div id="line2"></div>
+                <div id="line3"></div>
+            </div>
             <img src="img/berzelii_logo.png" alt="berzelii choklad logga">
             <nav>
                 <ul>
-                    <li><a href="praliner.html">SORTIMENT</a></li>
-                    <li><a href="abonneracafeet.html">ABONNERA CAFÉET</a></li>
-                    <li><a href="provningar.html">PROVNINGAR</a></li>
+                    <li><a href="praliner.html">PRALINER</a></li>
+                    <li><a href="abonneracafeet.html">TÅRTOR OCH DESSERTER</a></li>
+                    <li><a href="presentaskar.html">PRESENTASKAR</a></li>
+                    <li><a href="provningar.html">ABONNERA CAFÉET</a></li>
                 </ul>
             </nav>
         </header>
