--- a/praliner.html
+++ b/praliner.html
@@ -15,9 +15,10 @@
             <img src="img/berzelii_logo.png" alt="berzelii choklad logga">
             <nav>
                 <ul>
-                    <li><a href="praliner.html">SORTIMENT</a></li>
-                    <li><a href="abonneracafeet.html">ABONNERA CAFÉET</a></li>
-                    <li><a href="provningar.html">PROVNINGAR</a></li>
+                    <li><a href="praliner.html">PRALINER</a></li>
+                    <li><a href="abonneracafeet.html">TÅRTOR OCH DESSERTER</a></li>
+                    <li><a href="presentaskar.html">PRESENTASKAR</a></li>
+                    <li><a href="provningar.html">ABONNERA CAFÉET</a></li>
                 </ul>
             </nav>
         </header>
